refactor(core): 优化代码实现并移除主题功能
- 将反射实例化方式从 newInstance() 改为 getDeclaredConstructor().newInstance()
- 替换过时的 BeanUtils.instantiate 方法为 instantiateClass
- 优化 JSON 序列化配置，使用 JsonInclude.Value 构造包含规则
- 将缓存过期时间单位从 TimeUnit.SECONDS 改为 Duration
- 修复字段访问权限问题，添加安全的反射字段获取逻辑
- 移除 Spring MVC 主题相关功能和拦截器
- 将 MDC 拦截器替换为新的实现并增强请求上下文信息
- 优化 IP 地址处理逻辑，使用 strip() 方法替代 trimWhitespace()
- 更新 Redis 客户端创建